# diddy-vm

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  _config.yml  assembler.py  diddy.py  dvm.py  index.html  index.md  params.json  program1  vmbase.py
_layouts/: default.html  page.html
_site/: index.html
_site/stylesheets/: styles.css
cdiddy/: compile  diddy.c  dvm.c  dvm.h  makefile  vmbase.c  vmbase.h
cdiddy/coverage/: coverage.info  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
cdiddy/coverage/core/: dvm.c.func-sort-c.html  dvm.c.func.html  dvm.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  vmbase.c.func-sort-c.html  vmbase.c.func.html  vmbase.c.gcov.html
cdiddy/include/: diddy.h  dvm.h  min_unit.h  test_dvm.h  test_vmbase.h  vmbase.h
cdiddy/include/core/: dvm.h  vmbase.h
cdiddy/include/tests/: test_system_overrides.h
cdiddy/src/: all_tests.c  diddy.c  dvm.c  test_dvm.c  test_vmbase.c  unit_tests.c  vmbase.c
cdiddy/src/core/: dvm.c  vmbase.c
cdiddy/src/tests/: test_all.c  test_dvm.c  test_system_override.c  test_vmbase.c
dvm/: dvm.py  vmbase.py
dvm/tests/: testvmbase.py
hdiddy/: LICENSE  hdiddy.cabal
hdiddy/scripts/: build  update
hdiddy/src/: Main.hs
pdiddy/: diddy.py
pdiddy/dvm/: __init__.py  dvm.py  vmbase.py
programs/: helloworld.dpg  helloworld2.dpg  program1.dpg
puff/: ast.py  lang.md  lexer.py  parser.py  precedence.py  progdata.py  tokens.py
puff/tests/: testlexer.py  testparser.py  testprecedence.py
tests/: testdvm.py  testvmbase.py
tools/: assembler.py
(+25 files in other folders)
