name:                hdiddy
version:             0.1.0.0
synopsis:            Haskell implementation of the DiddyVM
homepage:            www.rumblesan.com
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
build-type:          Simple
cabal-version:       >=1.10

executable hdiddy
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

